fix resumption from console mode when monotonic clock is in use

BUG: 312947
FIXED-IN: 4.11.8